Added more controller and category controller functions
