# src/main/resources/api.yaml
@@ -8,7 +8,7 @@ servers:
   - url: http://localhost:8080/pycozza
 
 paths:
-  /users:
+  /user:
     get:
       description: Returns a list of users
       parameters:
@@ -52,3 +52,146 @@ paths:
               properties:
                 message:
                   type: string
+
+    post:
+      description: add a new user
+        parameters:
+          - name: name
+            in: query
+            description: name of user
+            schema:
+              type: String
+          - name: phone
+            in: query
+            description: phone number of user
+            schema:
+              type: integer
+          - name: email
+            in: query
+            description: email of user
+            schema:
+              type: String
+          - name: address
+            in: query
+            description: address number of user
+            schema:
+              type: String
+      responses:
+        '200':
+          description: Successfully added a user
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  required:
+                    - email
+                  properties:
+                    name:
+                      type: string
+                    phone:
+                      type: string
+                    address:
+                      type: integer
+                    email:
+                      type: string
+      '400':
+        description: Invalid request
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                message:
+                  type: string
+
+
+
+
+
+
+
+
+  /product:
+    get:
+      description: Returns a list of product
+      parameters:
+        - name: limit
+          in: query
+          description: Limits the number of items on a page
+          schema:
+            type: integer
+        - name: offset
+          in: query
+          description: Specifies the page number of the products to be displayed
+          schema:
+            type: integer
+      #  ----- Added lines  ----------------------------------------
+      responses:
+        '200':
+          description: Successfully returned a list of product
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  required:
+                    - name
+                    - imgLink
+                    - price
+                  properties:
+                    name:
+                      type: string
+                    imgLink:
+                      type: string
+                    description:
+                      type: string
+                    price:
+                      type: int
+      '400':
+        description: Invalid request
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                message:
+                  type: string
+
+
+
+  /category:
+    get:
+      description: Returns a list of category
+      #  ----- Added lines  ----------------------------------------
+      responses:
+        '200':
+          description: Successfully returned a list of category
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  required:
+                    - name
+                  properties:
+                    name:
+                      type: string
+      '400':
+        description: Invalid request
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                message:
+                  type: string
+
+
+
+
+
+
